<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>org.openbase</groupId>
    <artifactId>jul</artifactId>
    <version>2.0-SNAPSHOT</version>
    
    <name>JUL</name>
    <inceptionYear>2015</inceptionYear>
    <description>Java Utility Lib</description>

    <url>https://github.com/openbase/jul/wiki</url>

    <organization>
        <name>openbase.org</name>
        <url>https://github.com/openbase</url>
    </organization>
    
    <developers>
        <developer>
            <id>DivineThreepwood</id>
            <name>Marian Pohling</name>
            <email>divine@openbase.org</email>
            <url>https://github.com/DivineThreepwood</url>
            <organization>openbase.org</organization>
            <organizationUrl>https://github.com/openbase</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>pLeminoq</id>
            <name>Tamino Huxohl</name>
            <email>taminoh@ymail.com</email>
            <url>https://github.com/pLeminoq</url>
            <organization>openbase.org</organization>
            <organizationUrl>https://github.com/openbase</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>
    
    <licenses>
        <license>
            <name>LGPLv3</name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
        </license>
    </licenses>

    <packaging>pom</packaging>
    
    <scm>
        <connection>scm:git:https://github.com/openbase/jul.git</connection>
        <developerConnection>scm:git:https://github.com/openbase/jul.git</developerConnection>
        <url>https://github.com/openbase/jul.git</url>
    </scm>
   
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>1.10</version>
                <configuration>
                    <verbose>false</verbose>
                    <licenseName>lgpl_v3</licenseName>
                    <failOnMissingHeader>true</failOnMissingHeader>
                    <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
                    <canUpdateCopyright>true</canUpdateCopyright>
                    <canUpdateDescription>true</canUpdateDescription>
                    <canUpdateLicense>true</canUpdateLicense>
                    <roots>
                        <root>src/main/java</root>
                        <root>src/test</root>
                    </roots>
                </configuration>
                <executions>
                    <execution>
                        <id>first</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                    <execution>
                        <id>download-licenses</id>
                        <goals>
                            <goal>download-licenses</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>true</useReleaseProfile>
                    <releaseProfiles>deploy</releaseProfiles>
                    <goals>deploy</goals>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.0</version>
                        <configuration-->
                            <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233>
                            <source>8</source>
                            <javaApiLinks>
                                <property>
                                    <name>foo</name>
                                    <value>bar</value>
                                </property>
                            </javaApiLinks>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sonatype</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.7</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    
    <modules>
        <module>annotation</module>
        <module>schedule</module>
        <module>pattern</module>
        <module>exception</module>
        <module>visual</module>
        <module>processing</module>
        <module>storage</module>
        <module>interface</module>
        <module>communication</module>
        <module>audio</module>
        <module>extension</module>
    </modules>
    
    <properties>    
        <skipTests>false</skipTests>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <dependency.openjfx.version>13</dependency.openjfx.version>

        <dependency.fasterxml.jackson.version>[2.9,3.0-alpha)</dependency.fasterxml.jackson.version>
        <dependency.xom.version>[1.2,1.3-alpha)</dependency.xom.version>
        <dependency.io7m.xom.version>1.2.10</dependency.io7m.xom.version>
        <dependency.woodstox.version>[4.1,4.2-alpha)</dependency.woodstox.version>

        <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->

        <!-- fix version since the new one seems to cause a blocking bco start on netboot systems. -->
        <!--dependency.org.eclipse.jgit.version>[5.1,5.2-alpha)</dependency.org.eclipse.jgit.version-->
        <dependency.org.eclipse.jgit.version>[5.1.7,5.1.8-alpha)</dependency.org.eclipse.jgit.version>

        <dependency.jps.version>[3.4,3.5-alpha)</dependency.jps.version>

        <dependency.openbase.type.version>1.0-SNAPSHOT</dependency.openbase.type.version>

        <dependency.rsx.version>[0.18,0.19-alpha)</dependency.rsx.version>
        <!--dependency.rsx.version>0.18-SNAPSHOT</dependency.rsx.version-->

        <dependency.rsb.artifact>rsb</dependency.rsb.artifact>
        <dependency.rsb.version>${dependency.rsx.version}</dependency.rsb.version>

        <!-- jul.visual.javafx -->
        <dependency.org.controlsfx.version>[9.0,9.1-alpha)</dependency.org.controlsfx.version>
        <dependency.de.jensd.fontawesomefx.version>[8.9,8.10-alpha)</dependency.de.jensd.fontawesomefx.version>
        <dependency.com.jfoenix.version>[9.0,9.1-alpha)</dependency.com.jfoenix.version>
    </properties>   
    
    <repositories>
        <repository>
            <id>citec-releases</id>
            <name>CITEC Maven Repository Server</name>
            <url>https://mvn.cit-ec.de/nexus/content/repositories/releases/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>citec-snapshots</id>
            <name>CITEC Maven Repository Server</name>
            <url>https://mvn.cit-ec.de/nexus/content/repositories/snapshots/</url>
            <layout>default</layout>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.openbase</groupId>
            <artifactId>jps</artifactId>
            <version>${dependency.jps.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    
</project>
